--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
 <div class="wrap">
-  <div class="card">
+  <div class="card class1">
     <div class="front"><span>Front</span></div>
     <div class="back"><span>Back</span></div>
   </div>
